crates/uitest/fixtures/ty_check/payable_on_for_stmt.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/payable_on_for_stmt.fe
---
error[13-0001]: `#[payable]` is only valid on `init` blocks and `recv` arms (found on for statement)
  ┌─ payable_on_for_stmt.fe:2:5
  │
2 │     #[payable]
  │     ^^^^^^^^^^ move this attribute to an `init` block or `recv` arm
